[gd_scene load_steps=2 format=3 uid="uid://dlvarjp7sepwa"]

[ext_resource type="Script" path="res://Scripts/SetEsc.gd" id="1_rcgen"]

[node name="CanvasLayer" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_rcgen")

[node name="IntoMain" type="Button" parent="."]
offset_left = 96.0
offset_top = 40.0
offset_right = 235.0
offset_bottom = 71.0
text = "В главное меню"

[node name="ExitToTableTop" type="Button" parent="."]
anchors_preset = -1
anchor_right = 0.015
anchor_bottom = 0.016
offset_left = 96.0
offset_top = 136.0
offset_right = 231.945
offset_bottom = 158.872
text = "На рабочий стол"

[node name="Settings" type="Button" parent="."]
offset_left = 96.0
offset_top = 72.0
offset_right = 240.0
offset_bottom = 103.0
text = "Настройки"

[node name="Togame" type="Button" parent="."]
offset_left = 96.0
offset_top = 104.0
offset_right = 243.0
offset_bottom = 135.0
text = "Вернуться в игру"

[connection signal="pressed" from="IntoMain" to="." method="_on_into_main_pressed"]
[connection signal="pressed" from="ExitToTableTop" to="." method="_on_exit_to_table_top_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Togame" to="." method="_on_togame_pressed"]
